--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "build:netlify": "next build && next export"
+    "build:static": "next build && next export"
   },
   "dependencies": {
     "next": "10.0.1",
