--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "build:static": "next build && next export"
+    "build:static": "next build && next export",
+    "lint": "eslint ./src/** --fix"
   },
   "dependencies": {
     "next": "10.0.1",
@@ -21,7 +22,7 @@
     "@types/react": "^16.9.56",
     "postcss-flexbugs-fixes": "4.2.1",
     "postcss-preset-env": "^6.7.0",
-    "tailwindcss": "^1.9.6",
+    "tailwindcss": "^2.0.1",
     "typescript": "^4.0.5"
   }
 }
