--- a/package.json
+++ b/package.json
@@ -11,13 +11,19 @@
     "lint": "eslint ./src/** --fix"
   },
   "dependencies": {
+    "mongodb": "^3.6.3",
     "next": "10.0.1",
+    "next-auth": "^3.1.0",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-html-parser": "^2.0.2",
     "react-query": "^2.26.2",
     "react-query-devtools": "^2.6.3",
-    "serve": "^11.3.2"
+    "serve": "^11.3.2",
+    "typeorm": "^0.2.28"
+  },
+  "peerOptionalDependencies": {
+    "mongodb": "^3.6.0"
   },
   "devDependencies": {
     "@types/node": "^14.14.6",
