--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "lint": "eslint ./src/** --fix"
   },
   "dependencies": {
+    "@svgr/webpack": "^5.5.0",
     "@tailwindcss/line-clamp": "^0.1.0",
     "@types/cheerio": "^0.22.23",
     "@types/mongodb": "^3.6.3",
