--- a/package.json
+++ b/package.json
@@ -14,10 +14,13 @@
     "@svgr/webpack": "^5.5.0",
     "@tailwindcss/line-clamp": "^0.1.0",
     "@types/cheerio": "^0.22.23",
+    "@types/luxon": "^1.25.1",
     "@types/mongodb": "^3.6.3",
     "@types/next-auth": "^3.1.20",
     "@types/node-fetch": "^2.5.7",
     "cheerio": "^1.0.0-rc.5",
+    "heroicons-react": "^1.3.0",
+    "luxon": "^1.25.0",
     "mongodb": "^3.6.3",
     "next": "10.0.1",
     "next-auth": "^3.1.0",
