--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "lint": "eslint ./src/** --fix"
   },
   "dependencies": {
+    "@netlify/plugin-nextjs": "^3.1.1-experimental-odb.1",
     "@svgr/webpack": "^5.5.0",
     "@tailwindcss/line-clamp": "^0.1.0",
     "@types/cheerio": "^0.22.23",
@@ -22,7 +23,7 @@
     "heroicons-react": "^1.3.0",
     "luxon": "^1.25.0",
     "mongodb": "^3.6.3",
-    "next": "10.1.1",
+    "next": "10.2.3",
     "next-auth": "^3.1.0",
     "node-fetch": "^2.6.1",
     "react": "17.0.1",
