--- a/package.json
+++ b/package.json
@@ -19,11 +19,11 @@
     "@types/next-auth": "^3.1.20",
     "@types/node-fetch": "^2.5.7",
     "cheerio": "^1.0.0-rc.5",
-    "heroicons-react": "^1.3.0",
+    "heroicons-react": "1.3.0",
     "luxon": "^1.25.0",
     "mongodb": "^3.6.3",
     "next": "10.2.3",
-    "next-auth": "^3.1.0",
+    "next-auth": "3.1.0",
     "node-fetch": "^2.6.1",
     "react": "17.0.1",
     "react-dom": "17.0.1",
