--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "heroicons-react": "1.3.0",
     "luxon": "^1.25.0",
     "mongodb": "^3.6.9",
+    "mongodb-client-encryption": "^1.2.7",
     "next": "12.0.2",
     "next-auth": "3.29.0",
     "node-fetch": "^2.6.1",
@@ -36,6 +37,7 @@
     "mongodb": "^3.6.0"
   },
   "devDependencies": {
+    "@netlify/plugin-nextjs": "^4.0.0-beta.4",
     "@types/node": "^14.14.6",
     "@types/react": "^16.9.56",
     "postcss-flexbugs-fixes": "4.2.1",
