--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "luxon": "^1.25.0",
     "mongodb": "^3.6.9",
     "mongodb-client-encryption": "^1.2.7",
-    "next": "12.0.2",
+    "next": "^12.1.4",
     "next-auth": "3.29.0",
     "node-fetch": "^2.6.1",
     "react": "17.0.1",
@@ -37,7 +37,7 @@
     "mongodb": "^3.6.0"
   },
   "devDependencies": {
-    "@netlify/plugin-nextjs": "^4.0.0-beta.4",
+    "@netlify/plugin-nextjs": "^4.3.2",
     "@types/node": "^14.14.6",
     "@types/react": "^16.9.56",
     "postcss-flexbugs-fixes": "4.2.1",
