--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "mongodb-client-encryption": "^1.2.7",
     "next": "^12.1.4",
     "next-auth": "3.29.0",
+    "next-pwa": "^5.5.0",
     "node-fetch": "^2.6.1",
     "react": "17.0.1",
     "react-dom": "17.0.1",
