--- a/package.json
+++ b/package.json
@@ -11,24 +11,26 @@
     "lint": "eslint ./src/** --fix"
   },
   "dependencies": {
+    "@hedgedoc/html-to-react": "^1.4.5",
+    "@heroicons/react": "^2.0.13",
+    "@next-auth/mongodb-adapter": "^1.1.1",
     "@svgr/webpack": "^5.5.0",
+    "@tanstack/react-query": "^4.14.3",
+    "@tanstack/react-query-devtools": "^4.14.3",
     "@types/cheerio": "^0.22.23",
     "@types/luxon": "^1.25.1",
     "@types/mongodb": "^3.6.3",
     "@types/node-fetch": "^2.5.7",
     "cheerio": "^1.0.0-rc.5",
-    "heroicons-react": "1.3.0",
     "luxon": "^1.25.0",
-    "mongodb": "^3.6.9",
+    "mongodb": "^4.11.0",
     "mongodb-client-encryption": "^1.2.7",
-    "next": "^12.1.4",
-    "next-auth": "3.29.0",
+    "next": "^13.0.2",
+    "next-auth": "^4.16.2",
     "next-pwa": "^5.5.0",
     "node-fetch": "^2.6.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-html-parser": "^2.0.2",
-    "react-query": "^3.5.11",
     "serve": "^11.3.2",
     "ts-results": "^3.0.0",
     "typeorm": "^0.2.28"
